Reestructurado del HTML y JS funcional para el usuario

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Clima con OpenWeather</title>
+        <script src="script.js"></script>
     </head>
 
     <body>
-        <div id="app">
-            <h2>🌤️ Clima Actual</h2>
-            <input id="inputCiudad" placeholder="Escribe una ciudad">
-            <button onclick="obtenerClima()">Buscar</button>
+        <h2>🌤️ Clima Actual</h2>
+        <input id="inputCiudad" placeholder="Escribe una ciudad">
+        <button onclick="obtenerClima()">Buscar</button>
 
-            <div id="result"></div>
-            </div>
+        <div id="result"></div>
     </body>
 </html>
