--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Clima con OpenWeather</title>
+        <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
 
     <body>
-        <h2>🌤️ Clima Actual</h2>
-        <input id="inputCiudad" placeholder="Escribe una ciudad">
-        <button onclick="obtenerClima()">Buscar</button>
+        <div id="app">
+            <h2>🌤️ Clima Actual</h2>
 
-        <div id="result"></div>
+            <input id="inputCiudad" placeholder="Escribe una ciudad">
+            <button onclick="obtenerClima()">Buscar</button>
+
+            <div id="result"></div>
+        </div>
     </body>
 </html>
