Manejo de errores, refactoreo de nombres, y nuevo listener

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </head>
 
     <body>
-        <div id="app">
+        <div id="contenedor">
             <h2>🌤️ Clima Actual</h2>
 
-            <input id="inputCiudad" placeholder="Escribe una ciudad">
-            <button onclick="obtenerClima()">Buscar</button>
+            <input id="input-ciudad" placeholder="Escribe una ciudad">
+            <button id="btn-buscar">Buscar</button>
 
             <div id="result"></div>
         </div>
